moved javascript tags to the player page

--- a/source/play.html.slim
+++ b/source/play.html.slim
@@ -1,3 +1,6 @@
+script type='text/javascript' src='http://webplayer.unity3d.com/download_webplayer-3.x/3.0/uo/UnityObject2.js'
+
+= javascript_include_tag  'all.js'
 
 #unityPlayer
   .missing
