--- a/source/layouts/layout.slim
+++ b/source/layouts/layout.slim
@@ -7,7 +7,7 @@ html
     meta content= 'IE=edge,chrome=1' http-equiv= 'X-UA-Compatible'
 
     title Disco Dodgeball
-    = stylesheet_link_tag  'main'
+    link rel='stylesheet' href='stylesheets/main.css' media='screen' type='text/css'
 
     //google analytics
     script type='text/javascript' async='true' src='http://www.google-analytics.com/ga.js'
@@ -16,12 +16,12 @@ html
       img.img-responsive.logo-smaller src='images/disco_logo.png'
       ul.nav.nav-pills.nav-justified
         li
-          a href='/index.html' HOME
+          a href='index.html' HOME
         li
-          a href='/play.html' PLAY ALPHA
+          a href='play.html' PLAY ALPHA
         li
-          a href='/about.html' ABOUT
+          a href='about.html' ABOUT
         li
-          a href='/contact.html' CONTACT
+          a href='contact.html' CONTACT
       = yield
 
