--- a/source/stylesheets/main.scss
+++ b/source/stylesheets/main.scss
@@ -5,7 +5,7 @@ $nav-link-hover-bg: hsla(186, 100%, 7%, 0.9);
 @import "bootstrap";
 
 body {
-  background: url('/images/disco_background.jpg') no-repeat center center fixed; 
+  background: url('../images/disco_background.jpg') no-repeat center center fixed; 
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -19,7 +19,7 @@ body {
   padding-top: 12px;
   padding-bottom: 20px;
   background-color: rgba(0,0,0,0.80);
-  max-width: 810px;
+  max-width: 830px;
   height: auto;
   min-height: 100%;
 }
